<resources>
    <string-array name="accesslevels">
        <item>Seleccione un nivel de acceso</item> <!-- Elemento no seleccionable -->
        <item>Basico</item>
        <item>Administrador</item>
    </string-array>
    <string name="app_name">informes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login Errado"</string>
    <string name="registrar_nuevo_usuarios">Registrar Nuevo Usuario</string>
    <string name="logo_description">Ediberto Coronel Logo</string>
    <string name="photo_preview">foto</string>
    <string name="seleccionar_foto">Seleccionar Foto</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="ver_informe">Ver Informe</string>
    <string name="enviar_informe">Enviar Informe</string>
    <string name="hora_de_fin_hh_mm">Hora de fin (HH:mm)</string>
    <string name="hora_de_inicio_hh_mm">Hora de inicio (HH:mm)</string>
    <string name="observaciones">Observaciones</string>
    <string name="descripci_n_de_lo_realizado">Descripción de lo realizado</string>
    <string name="lugar_y_ubicaci_n_del_trabajo">Lugar y ubicación del trabajo</string>
    <string name="fecha">Fecha</string>
    <string name="report_image">imagen del reporte</string>
    <string name="toggle_password_visibility">ver/ocultar password</string>
</resources>